2011-06-27  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistImages.tcl: Further improvements related to Mac OS X
	* scripts/tablelistUtil.tcl:   Aqua.

	* doc/aqua.png: Updated screenshot.

2011-06-26  Csaba Nemethi <csaba.nemethi@t-online.de>

	* CHANGES.txt:                 Improvements related to Mac OS X Aqua.
	* scripts/tablelistConfig.tcl:
	* scripts/tablelistImages.tcl:
	* scripts/tablelistSort.tcl:
	* scripts/tablelistThemes.tcl:
	* scripts/tablelistUtil.tcl:
	* scripts/tablelistWidget.tcl:

	* ../../examples/config.tcl:      Changed some colors.
	* ../../examples/config_tile.tcl:
	* ../../examples/option.tcl:
	* ../../examples/option_tile.tcl:
	* ../../examples/styles.tcl:
	* ../../examples/styles_tile.tcl:

	* doc/tablelist.html: Updated to reflect the changes made in the demo
	  scripts.

	* doc/aqua.png:                 Updated screenshots.
	* doc/browse.png:
	* doc/browseTree.png:
	* doc/bwidget.png:
	* doc/config.png:
	* doc/dirViewer.png:
	* doc/embeddedWindows.png:
	* doc/embeddedWindows_tile.png:
	* doc/styles.png:
	* doc/tileWidgets.png:

2011-06-18  Csaba Nemethi <csaba.nemethi@t-online.de>

	* *.tcl:                          Bumped the version number to 5.3.
	* *.txt:
	* ../../examples/tablelist/*.tcl:

	* scripts/tablelist*.tcl: Enhanced the interactive row move operation;
	  added the -acceptchildcommand option; added the searchcolumn,
	  getformatted, getformattedcolumns, and getformattedcells subcommands;
	  added support for interactive cell editing with the aid of the Tk
	  core and tile menubutton widgets; added support for the row indices
	  "top" and "bottom" and for the column indices "left" and "right".

	* scripts/tclIndex: Newly generated.

	* doc/index.html:             Updated the documentation.
	* doc/tablelist.html:
	* doc/tablelistBWidget.html:
	* doc/tablelistCombobox.html:
	* doc/tablelistIwidgets.html:
	* doc/tablelistMentry.html:
	* doc/tablelistTile.html:
	* doc/tablelistTkCore.html: